Fix: 1719 Columns are misaligned on Payments->Deposits - override alignment for deposits list page - slight adjustment in transaction table header margin

--- a/client/transactions/list/style.scss
+++ b/client/transactions/list/style.scss
@@ -1,6 +1,6 @@
 @import 'node_modules/@wordpress/components/src/tooltip/style.scss';
 
-$space-header-item: 15px;
+$space-header-item: 25px;
 
 .transactions-list {
 	.date-time {
